--- a/svg-gallery/src/index.css
+++ b/svg-gallery/src/index.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
-
+@import url('https://fonts.cdnfonts.com/css/d-din');
 #nprogress .bar {
     background: #80ffff !important;
     height: 3px !important;
