--- a/svg-gallery/src/index.css
+++ b/svg-gallery/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Avenir:ital,wght@0,300;0,400;0,600;0,700;1,400&display=swap');
+@import '@fontsource/metropolis';
 
 #nprogress .bar {
     background: #80ffff !important;
