--- a/svg-gallery/src/components/Header/style.scss
+++ b/svg-gallery/src/components/Header/style.scss
@@ -15,22 +15,25 @@
   img {
     width: 150px;
   }
-  @include xs{
+  @include xs {
     padding: 5px;
     width: 70%;
   }
 }
 .mobileHeader {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 70px;
-  background: #fff;
-  box-shadow: 0px 8px 16px 0px rgba(34, 28, 28, 0.03);
-  .headerLeft{
-    width: 40%;
+  display: none;
+  @include xs {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
+    height: 70px;
+    background: #fff;
+    box-shadow: 0px 8px 16px 0px rgba(34, 28, 28, 0.03);
+    .headerLeft {
+      width: 40%;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+    }
   }
 }
