--- a/svg-gallery/src/index.css
+++ b/svg-gallery/src/index.css
@@ -1,30 +1,41 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
+@font-face {
+  font-family: "Metropolis-Bold";
+  src: local("Metropolis-Bold"),
+    url(./assets/fonts/Metropolis-Bold.otf) format("opentype");
+}
+@font-face {
+  font-family: "Metropolis-Regular";
+  src: local("Metropolis-Regular"),
+    url(./assets/fonts/Metropolis-Regular.otf) format("opentype");
+}
 #nprogress .bar {
-    background: #80ffff !important;
-    height: 3px !important;
+  background: #80ffff !important;
+  height: 3px !important;
 }
 
 #nprogress .spinner .spinner-icon {
-    width: 22px;
-    height: 22px;
-    border-top-color: #80ffff !important;
-    border-left-color: #80ffff !important;
+  width: 22px;
+  height: 22px;
+  border-top-color: #80ffff !important;
+  border-left-color: #80ffff !important;
 }
 
 #nprogress .spinner {
-    top: 15px;
-    left: 15px !important;
+  top: 15px;
+  left: 15px !important;
 }
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-html{
-    font-family: 'Poppins', sans-serif;
+html {
+  font-family: "Poppins", sans-serif;
 }
 
-body{
-    background-color: #ffffff;
+body {
+  background-color: #ffffff;
 }
+
