--- a/svg-gallery/src/components/NavigationBar/style.scss
+++ b/svg-gallery/src/components/NavigationBar/style.scss
@@ -71,6 +71,7 @@
 .mobileDropdownMenu {
   display: none;
   @include xs {
+    z-index: 3;
     width: 100%;
     position: absolute;
     padding: 1.5rem;
@@ -95,6 +96,7 @@
 .notificationPanel {
   display: none;
   position: absolute;
+  z-index: 3;
   top: 11%;
   right: 15%;
   width: 466px;
@@ -156,6 +158,7 @@
 
 .accountDropdown {
   display: none;
+  z-index: 3;
   width: 155px;
   min-height: 56px;
   flex-shrink: 0;
