--- a/svg-gallery/src/components/RecommendedModel/RecommendedModel.scss
+++ b/svg-gallery/src/components/RecommendedModel/RecommendedModel.scss
@@ -15,25 +15,25 @@
   line-height: 46px; /* 121.053% */
   text-transform: uppercase;
 }
-.swiper {
-    width: 100%;
-    height: 100%;
-  }
+// .swiper {
+//     width: 100%;
+//     height: 100%;
+//   }
   
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
+//   .swiper-slide {
+//     text-align: center;
+//     font-size: 18px;
+//     background: #fff;
   
-    /* Center slide text vertically */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+//     /* Center slide text vertically */
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//   }
   
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+//   .swiper-slide img {
+//     display: block;
+//     width: 100%;
+//     height: 100%;
+//     object-fit: cover;
+//   }
