--- a/svg-gallery/src/components/YouMayAlsoLike/YouMayAlsoLike.scss
+++ b/svg-gallery/src/components/YouMayAlsoLike/YouMayAlsoLike.scss
@@ -1,4 +1,12 @@
 @import "../../mixin.scss";
+.youMayAlsoLike .productCard {
+    max-width: 100%; 
+    max-height: 100%;
+    @include sm{
+      max-width: 95%; 
+      max-height: 95%;
+    }
+  }
 .youMayAlsoLike h2{
   text-transform: uppercase;
   font-size: 30px;
@@ -7,27 +15,29 @@
   line-height: 46px; /* 121.053% */
   text-transform: uppercase;
 }
-
-.swiper {
-  width: 100%;
-  height: 100%;
+.seeAllButton:hover {
+  color: blue;
 }
 
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
+// .swiper {
+//   width: 100%;
+//   height: 100%;
+// }
 
-  /* Center slide text vertically */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+// .swiper-slide {
+//   text-align: center;
+//   font-size: 18px;
+//   background: #fff;
+//   /* Center slide text vertically */
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+// }
 
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+// .swiper-slide img {
+//   display: block;
+//   width: 100%;
+//   height: 100%;
+//   object-fit: cover;
+// }
 
