--- a/svg-gallery/src/components/ProductCard/style.scss
+++ b/svg-gallery/src/components/ProductCard/style.scss
@@ -1,22 +1,24 @@
-
-.productCard {
-    width: 357px;
-}
+@import "../../mixin.scss";
 .product-card {
     width: 100%;
-    height: 300px;
+    height: 250px;
     object-fit: cover;
     display: block;
     position: relative;
     border-radius: 12px;
 }
+@media screen and (max-width: 640px) {
+    .product-card {
+        height: 180px;
+    }
+}
 .image-desc {
     color: #2F2725;
-    font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: 18px; /* 128.571% */
     text-transform: capitalize; 
+
 }
 .product-image-icon {
     position: absolute;
