--- a/svg-gallery/src/components/RecommendedModel/RecommendedModel.scss
+++ b/svg-gallery/src/components/RecommendedModel/RecommendedModel.scss
@@ -2,38 +2,39 @@
 .recommendedModel .productCard {
     max-width: 100%; 
     max-height: 100%;
-    @include sm{
-      max-width: 95%; 
-      max-height: 95%;
-    }
   }
 .recommendedModel h2{
   text-transform: uppercase;
-  font-size: 30px;
+  font-size: 1.5rem;
   font-style: normal;
   font-weight: 800;
   line-height: 46px; /* 121.053% */
   text-transform: uppercase;
 }
-// .swiper {
-//     width: 100%;
-//     height: 100%;
-//   }
+@media screen and (max-width:640px) {
+    .recommendedModel h2{
+      font-size: 1.2rem;
+    }
+}
+.swiper {
+    width: 100%;
+    height: 100%;
+  }
   
-//   .swiper-slide {
-//     text-align: center;
-//     font-size: 18px;
-//     background: #fff;
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
   
-//     /* Center slide text vertically */
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//   }
+    /* Center slide text vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   
-//   .swiper-slide img {
-//     display: block;
-//     width: 100%;
-//     height: 100%;
-//     object-fit: cover;
-//   }
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
