--- a/svg-gallery/src/components/YouMayAlsoLike/YouMayAlsoLike.scss
+++ b/svg-gallery/src/components/YouMayAlsoLike/YouMayAlsoLike.scss
@@ -2,42 +2,39 @@
 .youMayAlsoLike .productCard {
     max-width: 100%; 
     max-height: 100%;
-    @include sm{
-      max-width: 95%; 
-      max-height: 95%;
-    }
   }
+
 .youMayAlsoLike h2{
   text-transform: uppercase;
-  font-size: 30px;
+  font-size: 1.5rem;
   font-style: normal;
   font-weight: 800;
   line-height: 46px; /* 121.053% */
   text-transform: uppercase;
 }
+@media screen and (max-width:640px) {
+  .youMayAlsoLike h2{
+    font-size: 1.2rem;
+  }
+}
 .seeAllButton:hover {
   color: blue;
 }
 
-// .swiper {
-//   width: 100%;
-//   height: 100%;
-// }
+.swiper {
+  width: 100%;
+  height: 100%;
+}
 
-// .swiper-slide {
-//   text-align: center;
-//   font-size: 18px;
-//   background: #fff;
-//   /* Center slide text vertically */
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-// }
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-// .swiper-slide img {
-//   display: block;
-//   width: 100%;
-//   height: 100%;
-//   object-fit: cover;
-// }
+
 
