--- a/svg-gallery/src/components/RecommendedModel/RecommendedModel.scss
+++ b/svg-gallery/src/components/RecommendedModel/RecommendedModel.scss
@@ -3,38 +3,36 @@
     max-width: 100%; 
     max-height: 100%;
   }
+
 .recommendedModel h2{
-  text-transform: uppercase;
-  font-size: 1.5rem;
+  color: var(--, #2F2725);
+  /* 模块标题 */
+  font-family: Metropolis;
+  font-size: 38px;
   font-style: normal;
-  font-weight: 800;
+  font-weight: 700;
   line-height: 46px; /* 121.053% */
-  text-transform: uppercase;
+  text-transform: capitalize;
+}
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 @media screen and (max-width:640px) {
-    .recommendedModel h2{
-      font-size: 1.2rem;
-    }
+  .recommendedModel h2{
+    font-size: 1.5rem;
+  }
 }
-.swiper {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-  
-    /* Center slide text vertically */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+
+
