--- a/svg-gallery/src/components/YouMayAlsoLike/YouMayAlsoLike.scss
+++ b/svg-gallery/src/components/YouMayAlsoLike/YouMayAlsoLike.scss
@@ -5,17 +5,26 @@
   }
 
 .youMayAlsoLike h2{
-  text-transform: uppercase;
-  font-size: 1.5rem;
+  color: var(--, #2F2725);
+  /* 模块标题 */
+  font-family: Metropolis;
+  font-size: 38px;
   font-style: normal;
-  font-weight: 800;
+  font-weight: 700;
   line-height: 46px; /* 121.053% */
-  text-transform: uppercase;
+  text-transform: capitalize;
 }
-@media screen and (max-width:640px) {
-  .youMayAlsoLike h2{
-    font-size: 1.2rem;
-  }
+
+
+.seeAllButton{
+  color: var(--, #3F535E);
+  text-align: center;
+  font-family: Avenir;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 32px; /* 133.333% */
+  text-transform: capitalize;
 }
 .seeAllButton:hover {
   color: blue;
@@ -35,6 +44,13 @@
   justify-content: center;
   align-items: center;
 }
-
+@media screen and (max-width:640px) {
+  .youMayAlsoLike h2{
+    font-size: 1.5rem;
+  }
+  .seeAllButton{
+    font-size: 1.2rem;
+  }
+}
 
 
