--- a/svg-gallery/src/components/ProductImage/style.scss
+++ b/svg-gallery/src/components/ProductImage/style.scss
@@ -1,3 +1,6 @@
+.mainImage{
+  border-radius: 12px;
+}
 .thumbnailSlider {
   height: 150px;
 }
@@ -7,7 +10,7 @@
   height: 24px;
   flex-shrink: 0;
   position: absolute;
-  top: 50%;
+  top: 45%;
   left: 1%;
   z-index: 6;
 }
@@ -17,7 +20,56 @@
   height: 24px;
   flex-shrink: 0;
   position: absolute;
-  top: 50%;
+  top: 45%;
   right: 1%;
   z-index: 6;
+}
+
+.modalContainer {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  
+}
+.imageContainer{
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  background: transparent;
+  padding: 50px;
+}
+
+.prevBtn {
+  position: absolute;
+  top: 50%;
+  left: 5%;
+  background: rgba(255, 255, 255, 0.6);
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+.nextBtn {
+  position: absolute;
+  top: 50%;
+  right: 5%;
+  background: rgba(255, 255, 255, 0.6);
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+}
+.closeIcon{
+  color: #ffffff;
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
+  position: absolute;
+  right: 5%;
 }
