- combine with you may also like and recommend model

--- a/svg-gallery/src/components/ProductImage/style.scss
+++ b/svg-gallery/src/components/ProductImage/style.scss
@@ -2,7 +2,7 @@
   border-radius: 12px;
 }
 .thumbnailSlider {
-  height: 150px;
+  height: 150px !important;
 }
 .swiper-button-prev {
   background-image: url("../../assets/left-arrow.svg");
