--- a/svg-gallery/src/components/TagsDropdown/TagsDropdown.scss
+++ b/svg-gallery/src/components/TagsDropdown/TagsDropdown.scss
@@ -27,3 +27,7 @@
     letter-spacing: -0.01px;
     }
 
+    //for machinedropdown.jsx
+.category-item:hover {
+    background: rgba(21, 140, 197, 0.04);
+}
