--- a/svg-gallery/src/pages/UserPage/style.scss
+++ b/svg-gallery/src/pages/UserPage/style.scss
@@ -112,7 +112,7 @@
         display: inline-flex;
         align-items: flex-start;
         gap: 8px;
-
+        cursor: pointer;
         span {
             color: #3F535E;
             font-family: Metropolis;
@@ -168,6 +168,7 @@
             font-weight: 500;
             line-height: 28px;
             text-transform: capitalize;
+            cursor: pointer;
         }
 
         .activeSubTabItem {
@@ -175,6 +176,71 @@
             background: #1E78AB;
             color: #ffffff !important;
             padding: 3px 25px;
+        }
+    }
+}
+
+.DownloadItemCard {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+    border-radius: 12px;
+    background: #FFF;
+    gap: 20px;
+    margin-top: 20px;
+    .itemImage {
+        width: 10%;
+
+        img {
+            width: 100%;
+            border-radius: 4.703px;
+        }
+    }
+
+    .itemTitle {
+        width: 70%;
+        height: 140px;
+
+        h3 {
+            color: #000;
+            font-family: Avenir;
+            font-size: 24px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 27px;
+            text-transform: capitalize;
+        }
+    }
+
+    .actionButtons {
+        width: 20%;
+        height: 140px;
+        display: grid;
+
+        .deleteBtn {
+            display: flex;
+            justify-content: flex-end;
+            cursor: pointer;
+        }
+
+        .downloadBtnContainer {
+            display: flex;
+            justify-content: flex-end;
+            align-items: flex-end;
+
+            .downloadButton {
+                width: 50%;
+                justify-content: center;
+                background: #158CC5;
+                display: inline-flex;
+                padding: 9px 15px;
+                align-items: flex-start;
+                gap: 10px;
+                border-radius: 20px;
+                color: #ffffff;
+                cursor: pointer;
+            }
         }
     }
 }
