Update Profile Page

--- a/svg-gallery/src/components/ProfilePage/profile-password-change.scss
+++ b/svg-gallery/src/components/ProfilePage/profile-password-change.scss
@@ -40,6 +40,7 @@
         text-transform: capitalize;
       }
     .input-form{
+        outline: none;
         border-radius: 4px;
         border: 1px solid rgba(36, 43, 46, 0.10);
         background: #FFF;
@@ -47,7 +48,6 @@
         grid-column: span 15;  // Equivalent to col-span-6
         padding: 1rem;      // Equivalent to p-1.5
         color: #1a202c;       // Equivalent to text-gray-900
-        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);  // Equivalent to shadow-sm
         &::placeholder {
             color: #a0aec0;     // Equivalent to placeholder:text-gray-400
         }
