--- a/svg-gallery/src/components/ProfilePage/security-setting.scss
+++ b/svg-gallery/src/components/ProfilePage/security-setting.scss
@@ -36,6 +36,7 @@
         text-transform: capitalize;
       }
     .input-form{
+        outline: none;
         border-radius: 4px;
         border: 1px solid rgba(36, 43, 46, 0.10);
         background: #FFF;
@@ -43,7 +44,6 @@
         height: 20px;
         padding: 1.2rem;      // Equivalent to p-1.5
         color: #1a202c;       // Equivalent to text-gray-900
-        box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.1);  // Equivalent to shadow-sm
         &::placeholder {
             color: #a0aec0;     // Equivalent to placeholder:text-gray-400
         }
