Update Avatar Crop

--- a/svg-gallery/src/components/ProfilePage/avatar-editor-modal.scss
+++ b/svg-gallery/src/components/ProfilePage/avatar-editor-modal.scss
@@ -25,6 +25,7 @@ span{
   
   .modal-content {
     border-radius: 12px;
+    min-width: 330px;
     width: 22%; /* Set modal width to 50% of the screen */
     background-color: white;
     padding: 16px;
