--- a/svg-gallery/src/components/ProfilePage/avatar-editor-modal.scss
+++ b/svg-gallery/src/components/ProfilePage/avatar-editor-modal.scss
@@ -42,4 +42,15 @@ span{
     font-size: 20px;
     cursor: pointer;
   }
+
+  .zoom-btn{
+    width:6%;
+    @include xs{
+      width: 10%;
+    }
+  }
+  .controls-container img {
+    width: 100%;
+    max-width: 100%; /* Ensure the image doesn't exceed the button's width */
+  }
   
