--- a/svg-gallery/src/components/ProfilePage/avatar-editor-modal.scss
+++ b/svg-gallery/src/components/ProfilePage/avatar-editor-modal.scss
@@ -1,9 +1,8 @@
 @import "../../mixin.scss";
 span{
     color: #000;
-    /* 模块标题 */
     font-family: Metropolis;
-    font-size: 25px;
+    // font-size: 25px;
     font-style: normal;
     font-weight: 700;
     line-height: 46px; /* 121.053% */
