--- a/svg-gallery/src/components/ProfilePage/profile-password-change.scss
+++ b/svg-gallery/src/components/ProfilePage/profile-password-change.scss
@@ -23,7 +23,7 @@
         @include xs{
             display: flex;
             flex-direction: column;
-            align-items:start;
+            align-items: flex-start;
             gap:0.5rem;
         }
     }
