--- a/svg-gallery/src/components/FileUploader/style.scss
+++ b/svg-gallery/src/components/FileUploader/style.scss
@@ -1,3 +1,4 @@
+@import "../../mixin.scss";
 .custom-file-upload {
   display: inline-block;
   cursor: pointer;
@@ -121,5 +122,12 @@
     align-items: center;
     gap: 9.73px;
     margin: auto;
+  }
+  @include xs{
+    width: 100%;
+    padding: 0;
+    .uploadIcon{
+      height: 100px;
+    }
   }
 }
