--- a/svg-gallery/src/components/NavigationBar/style.scss
+++ b/svg-gallery/src/components/NavigationBar/style.scss
@@ -1,56 +1,72 @@
 @import "../../mixin.scss";
 
 .navigationContainer {
-  width: 40%;
+  // width: 40%;
   display: grid;
   align-items: center;
+
   @include xs {
     width: 50%;
   }
 }
+
 .desktopMenu {
   display: flex;
   justify-content: space-around;
+
   .menu-item {
     display: grid;
     align-items: center;
+    margin: 10px
   }
+
   .menu-btn {
     border-radius: 23px;
     background: #158cc5;
+    color: #ffffff;
+    cursor: pointer;
   }
+
   .menu-text {
     color: #221c1c;
     font-family: Metropolis;
     font-size: 20px;
     font-style: normal;
     font-weight: 700;
-    line-height: 24px; /* 120% */
+    line-height: 24px;
+    /* 120% */
     text-transform: uppercase;
     align-items: center;
     display: grid;
   }
+
   .avatarContainer {
     width: 32px;
     height: 32px;
+
     img {
       border-radius: 50%;
     }
   }
+
   @include xs {
     display: none;
   }
 }
+
 .mobileMenu {
   display: none;
+
   @include xs {
     display: flex;
     justify-content: space-around;
     width: 100%;
+
     .menu-item {
       display: grid;
       align-items: center;
     }
+
     .menu-btn {
       border-radius: 23px;
       background: #158cc5;
@@ -58,9 +74,11 @@
       height: 25px;
       font-size: 11px;
     }
+
     .avatarContainer {
       width: 32px;
       height: 32px;
+
       img {
         border-radius: 50%;
       }
@@ -70,6 +88,7 @@
 
 .mobileDropdownMenu {
   display: none;
+
   @include xs {
     z-index: 3;
     width: 100%;
@@ -79,14 +98,16 @@
     left: 0%;
     background: #fff;
     box-shadow: 0px 8px 16px 0px rgba(34, 28, 28, 0.03);
+
     ul {
       li {
-        color:#221c1c;
+        color: #221c1c;
         font-family: Metropolis;
         font-size: 20px;
         font-style: normal;
         font-weight: 500;
-        line-height: 35px; /* 120% */
+        line-height: 35px;
+        /* 120% */
         text-transform: uppercase;
       }
     }
@@ -105,6 +126,7 @@
   border: 0.5px solid rgba(17, 41, 54, 0.04);
   background: #fff;
   box-shadow: 7px 8px 11px rgba(17, 41, 54, 0.04);
+
   @include xs {
     width: 90%;
     right: 5%;
@@ -113,17 +135,21 @@
 
 .notificationItemWrapper {
   padding: 1.5rem;
+
   .notificationItemHeader {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
     .userAvatar {
       width: 32px;
       height: 32px;
+
       img {
         border-radius: 50%;
       }
     }
+
     .notificationItemName {
       width: 65%;
       color: #2f2725;
@@ -134,16 +160,19 @@
       line-height: 22px;
       text-transform: capitalize;
     }
+
     .notificationItemDate {
       color: #c7cdd0;
       font-family: Avenir;
       font-size: 14px;
       font-style: normal;
       font-weight: 500;
-      line-height: 18px; /* 128.571% */
+      line-height: 18px;
+      /* 128.571% */
       text-transform: capitalize;
     }
   }
+
   .notificationItemBody {
     padding: 1rem;
     color: #2f2725;
@@ -151,7 +180,8 @@
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
-    line-height: 24px; /* 171.429% */
+    line-height: 24px;
+    /* 171.429% */
     text-transform: capitalize;
   }
 }
@@ -169,11 +199,13 @@
   top: 11%;
   right: 7%;
   position: absolute;
+
   .logoutBtn {
     padding: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
+
     span {
       margin-left: 10px;
       color: #2f2725;
@@ -182,8 +214,38 @@
       font-size: 20px;
       font-style: normal;
       font-weight: 400;
-      line-height: 24px; /* 120% */
+      line-height: 24px;
+      /* 120% */
       text-transform: capitalize;
     }
+  }
+}
+
+.uploadDropdown {
+  display: none;
+  z-index: 3;
+  width: auto;
+  min-height: 56px;
+  flex-shrink: 0;
+  border-radius: 12px;
+  border: 0.5px solid rgba(17, 41, 54, 0.04);
+  background: #fff;
+  box-shadow: 7px 8px 11px rgba(17, 41, 54, 0.04);
+  top: 10%;
+  right: 12%;
+  position: absolute;
+  padding: 15px;
+  cursor: pointer;
+
+  span {
+    margin-left: 10px;
+    color: #2f2725;
+    text-align: right;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    /* 120% */
+    text-transform: capitalize;
   }
 }
