--- a/svg-gallery/src/components/ProductDetail/style.scss
+++ b/svg-gallery/src/components/ProductDetail/style.scss
@@ -1,9 +1,13 @@
+@import "../../mixin.scss";
+
 .activeStar {
   fill: #fcb500 !important;
 }
+
 .inactiveStar {
   fill: #f6f7f7 !important;
 }
+
 .downloadBtn {
   border-radius: 23px !important;
   background: #158cc5;
@@ -24,8 +28,25 @@
   font-size: 24px;
   font-style: normal;
   font-weight: 700;
-  line-height: 29px; /* 120.833% */
+  line-height: 29px;
+  /* 120.833% */
   text-transform: capitalize;
+
+  @include xs {
+    font-size: 18px;
+  }
+}
+
+.authorDescription {
+  color:  #2F2725;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  text-transform: capitalize;
+  @include xs{
+    font-size: 11px;
+  }
 }
 
 .productTitle {
@@ -34,8 +55,13 @@
   font-size: 36px;
   font-style: normal;
   font-weight: 700;
-  line-height: 54px; /* 150% */
+  line-height: 54px;
+  /* 150% */
   text-transform: capitalize;
+  @include xs{
+    font-size: 14px;
+    line-height: 35px;
+  }
 }
 
 .productId {
@@ -44,7 +70,8 @@
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
-  line-height: 22px; /* 122.222% */
+  line-height: 22px;
+  /* 122.222% */
   text-transform: capitalize;
 }
 
@@ -71,20 +98,24 @@
   background: #158cc5;
   color: #ffffff;
 }
+
 .modalAction {
   display: flex;
   justify-content: space-between !important;
+
   .cancelBtn {
     border-radius: 25.11px;
     border: 1px solid #c7cdd0;
     color: #2f2725;
   }
+
   .submitBtn {
     border-radius: 25.11px;
     background: #158cc5;
     color: #ffffff;
   }
-  .submitBtn:hover{
+
+  .submitBtn:hover {
     color: #158cc5
   }
 }
