--- a/svg-gallery/src/components/ProductImage/style.scss
+++ b/svg-gallery/src/components/ProductImage/style.scss
@@ -1,8 +1,12 @@
+@import "../../mixin.scss";
 .mainImage{
   border-radius: 12px;
 }
 .thumbnailSlider {
   height: 150px !important;
+  @include xs{
+    height: 50px !important;
+  }
 }
 .swiper-button-prev {
   background-image: url("../../assets/left-arrow.svg");
@@ -13,6 +17,9 @@
   top: 45%;
   left: 1%;
   z-index: 6;
+  @include xs{
+    top: 20%
+  }
 }
 .swiper-button-next {
   background-image: url("../../assets/right-arrow.svg");
@@ -23,6 +30,9 @@
   top: 45%;
   right: 1%;
   z-index: 6;
+  @include xs{
+    top: 20%;
+  }
 }
 
 .modalContainer {
@@ -72,4 +82,9 @@
   flex-shrink: 0;
   position: absolute;
   right: 5%;
+}
+.swiper-wrapper{
+  @include xs{
+    height: auto !important;
+  }
 }
