--- a/svg-gallery/src/components/ProductionStep/ProductionStep.scss
+++ b/svg-gallery/src/components/ProductionStep/ProductionStep.scss
@@ -7,8 +7,13 @@
     font-size: 38px;
     font-style: normal;
     font-weight: 700;
-    line-height: 46px; /* 121.053% */
+    line-height: 46px;
+    /* 121.053% */
     text-transform: capitalize;
+
+    @include xs {
+      font-size: 24px;
+    }
   }
 
   p {
@@ -17,7 +22,13 @@
     font-size: 26px;
     font-style: normal;
     font-weight: 400;
-    line-height: 39px; /* 150% */
+    line-height: 39px;
+
+    /* 150% */
+    @include xs {
+      font-size: 14px;
+      line-height: 30px;
+    }
   }
 
   img {
