--- a/svg-gallery/src/components/ProfilePage/personal-setting.scss
+++ b/svg-gallery/src/components/ProfilePage/personal-setting.scss
@@ -59,7 +59,7 @@
         @include xs{
             display: flex;
             flex-direction: column;
-            align-items:start;
+            align-items: flex-start;
             gap:0.2rem;
         }
     }
@@ -101,7 +101,7 @@
         @include xs{
             display: flex;
             flex-direction: column;
-            align-items:end;
+            align-items: flex-end;
         }
     }
 }
