--- a/svg-gallery/src/components/ProfilePage/profile-password-change.scss
+++ b/svg-gallery/src/components/ProfilePage/profile-password-change.scss
@@ -51,6 +51,9 @@
         &::placeholder {
             color: #a0aec0;     // Equivalent to placeholder:text-gray-400
         }
+        &:focus{
+            border-color: theme('colors.custom-blue')
+        }
         line-height: 1.5;     // Equivalent to leading-6
         @include xs{
             width:100%;
