--- a/svg-gallery/src/components/TagsDropdown/TagsDropdown.scss
+++ b/svg-gallery/src/components/TagsDropdown/TagsDropdown.scss
@@ -28,6 +28,9 @@
     }
 
     //for machinedropdown.jsx
-.category-item:hover {
+.machine-category-item:hover {
     background: rgba(21, 140, 197, 0.04);
+}
+.category-item:hover {
+    background: rgba(36, 43, 46, 0.04);
 }
