--- a/svg-gallery/src/components/NavigationBar/style.scss
+++ b/svg-gallery/src/components/NavigationBar/style.scss
@@ -217,6 +217,9 @@
       line-height: 24px;
       /* 120% */
       text-transform: capitalize;
+      &:hover{
+        color: theme("colors.custom-blue")
+      }
     }
   }
 }
