--- a/svg-gallery/src/components/ProfilePage/avatar-editor-modal.scss
+++ b/svg-gallery/src/components/ProfilePage/avatar-editor-modal.scss
@@ -1,15 +1,6 @@
 @import "../../mixin.scss";
-span{
-    color: #000;
-    font-family: Metropolis;
-    // font-size: 25px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 46px; /* 121.053% */
-    text-transform: capitalize;
-}
-.modal-container {
 
+.modal-container {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,6 +11,16 @@ span{
     height: 100%;
     background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
     z-index: 10; /* Set z-index to 10 */
+    span{
+      color: #000;
+      /* 模块标题 */
+      font-family: Metropolis;
+      font-size: 25px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 46px; /* 121.053% */
+      text-transform: capitalize;
+  }
   }
   
   .modal-content {
