--- a/svg-gallery/src/components/ProfilePage/personal-setting.scss
+++ b/svg-gallery/src/components/ProfilePage/personal-setting.scss
@@ -78,7 +78,6 @@
 
 
     .input-form{
-        outline: none;
         border-radius: 4px;
         border: 1px solid rgba(36, 43, 46, 0.10);
         background: #FFF;
@@ -90,13 +89,17 @@
             color: #a0aec0;     // Equivalent to placeholder:text-gray-400
         }
         line-height: 1.5;     // Equivalent to leading-6
+        &:focus {
+            border-color: theme('colors.custom-blue', '#3490dc'); 
+            outline: none; 
+        }
         @include xs{
             width:100%;
             height:25px;
         }
+
     }
 
-    
     .submit-btn{
         @include xs{
             display: flex;
