--- a/svg-gallery/src/components/ProfilePage/security-setting.scss
+++ b/svg-gallery/src/components/ProfilePage/security-setting.scss
@@ -45,23 +45,23 @@
         border: 1px solid rgba(36, 43, 46, 0.10);
         background: #FFF;
         width: 100%;
-        height: 20px;
+        height: 18px;
         padding: 1.2rem; // Equivalent to p-1.5
         color: #1a202c; // Equivalent to text-gray-900
-
         &::placeholder {
             color: #a0aec0; // Equivalent to placeholder:text-gray-400
         }
-
         line-height: 1.5; // Equivalent to leading-6
-
+        &:focus{
+            border-color: theme('colors.custom-blue')
+        }
         @include xs {
             width: 100%;
             height: 30px;
         }
     }
 
-    .submit-btn {
+    .submit-password-btn {
         border-radius: 31px;
         background-color: rgba(36, 43, 46, 0.10);
         display: inline-flex;
@@ -71,7 +71,9 @@
         align-items: center;
         gap: 10px;
         flex-shrink: 0;
-
+        &:hover{
+            background: rgba(21, 140, 197, 0.06);
+        }
         @include xs {
             width: 20%;
         }
