--- a/svg-gallery/src/components/ProductDetail/style.scss
+++ b/svg-gallery/src/components/ProductDetail/style.scss
@@ -10,7 +10,7 @@
 
 .downloadBtn {
   border-radius: 23px !important;
-  background: #158cc5;
+  background: #158CC5 !important;
   height: 40px;
   font-size: 11px;
   margin-right: 2rem !important;
