--- a/svg-gallery/src/components/Carousel/style.scss
+++ b/svg-gallery/src/components/Carousel/style.scss
@@ -1,3 +1,7 @@
+.mySwiper {
+  height: 254px;
+}
+
 .swiper {
   width: 100%;
   height: 100%;
@@ -20,6 +24,7 @@
   height: 100%;
   object-fit: cover;
 }
+
 .swiper-pagination-bullet {
   border-radius: 2.5px;
   background: rgba(255, 255, 255, 0.6);
@@ -27,6 +32,7 @@
   height: 5px;
   flex-shrink: 0;
 }
+
 .swiper-pagination-bullet-active {
   border-radius: 2.5px;
   background: #fff;
