--- a/svg-gallery/src/pages/NotificationPage/style.scss
+++ b/svg-gallery/src/pages/NotificationPage/style.scss
@@ -107,7 +107,7 @@
                     }
                 }
                 .notiBody{
-                    height: 90px;
+                    height: 55px;
                     display: grid;
                     margin-top: 20px;
                 }
@@ -117,7 +117,8 @@
                 width: 10%;
 
                 img {
-                    width: 100%;
+                    width: 80px;
+                    height: 60px;
                     border-radius: 1.987px;
                 }
             }
