--- a/svg-gallery/src/pages/UserPage/style.scss
+++ b/svg-gallery/src/pages/UserPage/style.scss
@@ -234,7 +234,7 @@
                 justify-content: center;
                 background: #158CC5;
                 display: inline-flex;
-                padding: 9px 15px;
+                padding: 5px 15px;
                 align-items: flex-start;
                 gap: 10px;
                 border-radius: 20px;
@@ -244,3 +244,32 @@
         }
     }
 }
+
+.uploadBtnDropdown {
+    display: none;
+    z-index: 3;
+    width: auto;
+    min-height: 56px;
+    flex-shrink: 0;
+    border-radius: 12px;
+    border: 0.5px solid rgba(17, 41, 54, 0.04);
+    background: #fff;
+    box-shadow: 7px 8px 11px rgba(17, 41, 54, 0.04);
+    top: 63%;
+    right: -2%;
+    position: absolute;
+    padding: 15px;
+    cursor: pointer;
+  
+    span {
+      margin-left: 10px;
+      color: #2f2725;
+      text-align: right;
+      font-size: 18px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 30px;
+      /* 120% */
+      text-transform: capitalize;
+    }
+  }
