--- a/svg-gallery/src/components/ProductCard/style.scss
+++ b/svg-gallery/src/components/ProductCard/style.scss
@@ -4,7 +4,6 @@
     height: 280px;
     object-fit: cover;
     display: block;
-    position: relative;
     border-radius: 12px;
 }
 @media screen and (max-width: 640px) {
@@ -20,24 +19,12 @@
     text-transform: capitalize; 
 
 }
-.product-image-icon {
-    position: absolute;
-    top: 12px;
-    right: 12px;
-    display: grid;
-    gap: 10px
-}
-.product-image-button {
-    position: relative;
-    top: 12px;
-    left: 12px;
-}
+
 .howto-btn {
     display: inline-flex;
     padding: 4px 12px;
     justify-content: center;
     align-items: center;
-    gap: 4px;
     border-radius: 4px;
     background: rgba(255, 255, 255, 0.80);
     backdrop-filter: blur(2px);
@@ -45,6 +32,11 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 22px; /* 137.5% */
+    @include xs {
+        padding: 2px 6px;
+        width: 40%;
+        font-size: 11px;
+    }
 }
 .download-btn {
     border-radius: 4px;
@@ -54,7 +46,11 @@
     padding: 4px 12px;
     justify-content: center;
     align-items: center;
-    gap: 4px;
     color: #fff;
-    font-size: 16px;
+   
+    @include xs {
+        padding: 2px 6px;
+        width: 40%;
+        font-size: 11px;
+    }
 }
