--- a/svg-gallery/src/components/ProductDetail/style.scss
+++ b/svg-gallery/src/components/ProductDetail/style.scss
@@ -14,6 +14,10 @@
   height: 40px;
   font-size: 11px;
   margin-right: 2rem !important;
+  text-transform: uppercase;
+  font-weight: 700;
+ line-height: 26px; /* 118.182% */
+
 }
 
 .authorAvatar {
@@ -58,10 +62,14 @@
   line-height: 54px;
   /* 150% */
   text-transform: capitalize;
-  @include xs{
-    font-size: 14px;
+  
+}
+@media screen and (max-width:1000px) {
+  .productTitle{
+    font-size: 26px;
     line-height: 35px;
   }
+  
 }
 
 .productId {
