--- a/svg-gallery/src/pages/InspirationUploadPage/style.scss
+++ b/svg-gallery/src/pages/InspirationUploadPage/style.scss
@@ -26,3 +26,15 @@
   border: 1px solid rgba(36, 43, 46, 0.1);
   background: #fff;
 }
+.ck-content{
+  height: 250px;
+}
+.productionStepBtnLabel{
+  color: #C7CDD0;
+  font-family: Metropolis;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  text-transform: capitalize;
+}
