--- a/svg-gallery/src/components/NavigationBar/style.scss
+++ b/svg-gallery/src/components/NavigationBar/style.scss
@@ -16,6 +16,7 @@
   }
 }
 
+
 .desktopMenu {
   display: flex;
   justify-content: space-around;
@@ -198,7 +199,7 @@
         font-family: Metropolis;
         font-size: 20px;
         font-style: normal;
-        font-weight: 500;
+        font-weight: bold;
         line-height: 35px;
         /* 120% */
         text-transform: uppercase;
@@ -221,7 +222,7 @@
         font-family: Metropolis;
         font-size: 20px;
         font-style: normal;
-        font-weight: 500;
+        font-weight: bold;
         line-height: 35px;
         /* 120% */
         text-transform: uppercase;
@@ -244,7 +245,7 @@
         font-family: Metropolis;
         font-size: 20px;
         font-style: normal;
-        font-weight: 500;
+        font-weight: bold;
         line-height: 35px;
         /* 120% */
         text-transform: uppercase;
@@ -267,7 +268,7 @@
         font-family: Metropolis;
         font-size: 20px;
         font-style: normal;
-        font-weight: 500;
+        font-weight: bold;
         line-height: 35px;
         /* 120% */
         text-transform: uppercase;
@@ -280,7 +281,7 @@
   display: none;
   position: absolute;
   z-index: 3;
-  top: 11%;
+  top: 4.5%;
   right: 15%;
   width: 466px;
   min-height: 100px;
@@ -290,8 +291,52 @@
   box-shadow: 7px 8px 11px rgba(17, 41, 54, 0.04);
 
   @include xs {
-    width: 90%;
+    width: 70%;
+    right: 12.5%;
+    top: 3.7%;
+  }
+  @include sm{
+    top: 3.7%;
+    width: 70%;
     right: 5%;
+  }
+  @include md{
+    width: 50%;
+    right: 5%;
+  }
+  @include lg{
+    top: 8.5%;
+    right: 3%;
+  }
+  @include xl{
+    top: 10%;
+    right: 5%;
+  }
+}
+.notificationOverlay{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  z-index: 2;
+  background: rgba(0, 0, 0, 0.60);
+  top: 4.5%;
+  bottom: 0px;
+  display: none;
+  @include xs{
+    top: 3.7%;
+  }
+  @include sm{
+    top: 3.7%;
+  }
+  @include md{
+    display: none !important;
+  }
+  @include lg{
+    display: none !important;
+  }
+  @include xl{
+    display: none !important;
   }
 }
 
@@ -321,6 +366,10 @@
       font-weight: 800;
       line-height: 22px;
       text-transform: capitalize;
+      @include xs{
+        width: 60%;
+        font-size: 16px;
+      }
     }
 
     .notificationItemDate {
@@ -332,6 +381,9 @@
       line-height: 18px;
       /* 128.571% */
       text-transform: capitalize;
+      @include xs{
+        font-size: 11px;
+      }
     }
   }
 
@@ -412,5 +464,22 @@
     line-height: 30px;
     /* 120% */
     text-transform: capitalize;
+  }
+  @include xs{
+    top: 3.5%
+  }
+  @include sm{
+    top: 3%
+  }
+  @include md{
+    top: 4%
+  }
+  @include lg{
+    top: 12%;
+    right: 5%;
+  }
+  @include xl{
+    top: 13%;
+    right: 13%;
   }
 }
