--- a/svg-gallery/src/components/ProductImage/style.scss
+++ b/svg-gallery/src/components/ProductImage/style.scss
@@ -88,14 +88,17 @@
   //   height: auto !important;
   // }
 }
-.swiper-pagination{
-  position: static;
+.productImageSwiper{
+  .swiper-pagination{
+    position: static;
+  }
+  .swiper-pagination-bullet{
+    background: #6f6f6f !important;
+    width: 30px !important;
+  }
+  .swiper-pagination-bullet-active{
+    background: #2F2725 !important;
+    width: 30px !important;
+  }
 }
-.swiper-pagination-bullet{
-  background: #6f6f6f !important;
-  width: 30px !important;
-}
-.swiper-pagination-bullet-active{
-  background: #2F2725 !important;
-  width: 30px !important;
-}
+
