--- a/svg-gallery/src/components/ProfilePage/profile-page.scss
+++ b/svg-gallery/src/components/ProfilePage/profile-page.scss
@@ -23,6 +23,7 @@
         color:#158CC5
     }
     button:focus{
+        color:#158CC5;
         background-color:rgba(21, 140, 197, 0.04);
     }
 
