Fix bug on Selina Feedback

--- a/svg-gallery/src/components/ProfilePage/profile-page.scss
+++ b/svg-gallery/src/components/ProfilePage/profile-page.scss
@@ -19,10 +19,7 @@
         font-size: 15px;
     }
     }
-    button:hover{
-        color:#158CC5
-    }
-    button:focus{
+    #btn-active{
         color:#158CC5;
         background-color:rgba(21, 140, 197, 0.04);
     }
