--- a/svg-gallery/src/pages/HomePage/home-page.scss
+++ b/svg-gallery/src/pages/HomePage/home-page.scss
@@ -13,4 +13,13 @@
     }
 }
 
+.loadMore{
+    color: #158CC5;
+    font-family: Avenir;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-transform: capitalize;
+}
 
