--- a/svg-gallery/src/components/NavigationBar/style.scss
+++ b/svg-gallery/src/components/NavigationBar/style.scss
@@ -301,7 +301,7 @@
   @include xs {
     width: 70%;
     right: 12.5%;
-    top: 3.7%;
+    top: 5%;
   }
   @include sm{
     top: 3.7%;
@@ -332,7 +332,7 @@
   bottom: 0px;
   display: none;
   @include xs{
-    top: 3.7%;
+    top: 6.1%;
   }
   @include sm{
     top: 3.7%;
@@ -508,4 +508,13 @@
   justify-content: center;
   top: 0;
   right: 0;
+}
+.all-msg-btn{
+  color: #2F2725;
+  font-family: Metropolis;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 22px;
+  text-transform: capitalize;
 }
